test/fails/bad_casts/as4.lgl
tag a is vec<2>;
tag b is vec<3>;

void main() {
    a avec = [1., 1.];

    b fail = avec as b; // Bad dimensions
}